--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
   --accent: #EE9972;
   --light: #E5E5E5;
   --dark: #333333;
+  --white: #FFFFFF;
+  --black: #000000;
 }
 #root{
   width: 70%;
@@ -34,7 +36,9 @@ a:hover{
 button:hover{
   cursor: pointer;
   box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.35);
-  transition: box-shadow 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  background-color: var(--accent) !important;
+  color: var(--white);
 }
 li{
   list-style: none;
@@ -44,9 +48,13 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
+  padding: 2rem;
   background-color: var(--light);
   border-radius: 0 0 8px 8px;
+  position: sticky;
+  top: 0;
+  box-shadow: 0px 0px 10px 0px var(--dark);
+  z-index: 99;
 }
 
 /* header nav ul{
@@ -101,6 +109,7 @@ header button{
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    
   }
   header button{
     display: block;
@@ -153,7 +162,7 @@ main{
 }
 main .hero-section{
   background-color: var(--primary);
-  padding: 3rem;
+  padding: 2rem;
   width: 100%;
   height: 23rem;
   display: flex;
@@ -193,7 +202,7 @@ main section .hero-description button{
   font-weight: 600;
   font-family: 'Inter', sans-serif;
   border: none;
-  border-radius: 15px;
+  border-radius: 16px;
   
   background-color: var(--secondary);
 }
@@ -207,7 +216,7 @@ main section .hero-image img{
 
 main .highlights-section{
   margin-top: 8rem;
-  padding: 3rem;
+  padding: 2rem;
 }
 main .highlights-top{
   display: flex;
@@ -231,7 +240,7 @@ main .highlights-top button{
   font-weight: 600;
   font-family: 'Inter', sans-serif;
   border: none;
-  border-radius: 15px;
+  border-radius: 16px;
   background-color: var(--secondary);
 }
 main .highlights-cards{
@@ -240,13 +249,17 @@ main .highlights-cards{
   justify-content: space-between;
 }
 main .card{
-  border-radius: 8px;
+  border-radius: 16px;
   background-color: var(--light);
   flex-basis: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 3px 8px 6px rgb(0, 0, 0, 0.2);
+}
+main .card:hover{
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.35);
+  transition: box-shadow 0.20s ease-in;
 }
 main .card .card-title{
   margin-top: 2rem;
@@ -279,7 +292,6 @@ main .card .card-description{
   font-weight: 400;
 }
 main .card .card-order{
-  width: 80%;
   display: flex;
   align-items: center;
   margin-bottom: 1.5rem;
@@ -415,6 +427,166 @@ main .card img{
 }
 
 
+.testimonials-section{
+  width: 100%;
+  margin-top: 3rem;
+  padding: 2rem;
+  background-color: var(--light);
+}
+.testimonials-section>h1{
+  text-align: center;
+  color: var(--dark);
+  font-family: 'Markazi Text', sans-serif;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.testimonials-section .testimonials {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.testimonials-section .testimonials .testimonial{
+  background-color: var(--white);
+  flex-basis: 250px;
+  padding: 1.3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+  gap: 1rem;
+  border-radius: 16px;
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.35);
+}
+.testimonials-section .testimonials .testimonial:hover{
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.35);
+  transition: box-shadow 0.4s ease-in-out;
+}
+.testimonials-section .testimonials .testimonial>h1{
+  font-size: 1.9rem;
+  font-family: 'Karla', serif;
+  font-style: normal;
+  font-weight: 700;
+}
+.testimonials-section .testimonials .testimonial .inline{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.testimonials-section .testimonials .testimonial .inline img{
+  max-width: 40%;
+}
+.testimonials-section .testimonials .testimonial .inline h2{
+  font-size: 1.4rem;
+  font-family: 'Karla', serif;
+  font-style: normal;
+  font-weight: 500;
+}
+.testimonials-section .testimonials .testimonial p{
+  font-size: 1.2rem;
+  font-family: 'Karla', serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+
+
+
+.about-section{
+  margin-top: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about-section .about-text{
+  flex-basis: 45%;
+}
+.about-section .about-text h1{
+  font-size: 3.4rem;
+  font-family: 'Markazi Text', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+.about-section .about-text>h2{
+  margin-top: -0.7rem;
+  font-size: 2.3rem;
+  font-family: 'Markazi Text', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+.about-section .about-text>p{
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  font-family: 'Karla', serif;
+  font-style: normal;
+  font-weight: 400;
+}
+.about-section .about-imgs{
+  height: 40vh;
+  flex-basis: 50%;
+  position: relative;
+}
+/* .about-section img{
+  max-width: 80%;
+} */
+.about-section .about-imgs img:nth-child(1){
+  position: absolute !important; 
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 300px !important;
+  height: 350px !important;
+  object-fit: cover;
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.35);
+  border-radius: 8px;
+}
+.about-section .about-imgs img:nth-child(2){
+  position: absolute !important;/* Position the first image absolutely within the container */
+  top: 100px;
+  right: 0;
+  z-index: 2;
+  width: 300px !important;
+  height: 350px !important;
+  object-fit: cover;
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.35);
+  border-radius: 8px;
+}
+@media screen and (max-width:1024px) {
+  .about-section{
+    display: flex !important;
+    flex-direction: column-reverse;
+    align-items: stretch;
+    justify-content: center;
+  }
+  .about-section .about-text{
+    flex-basis: 100%;
+    margin-top: 1rem;
+  }
+  .about-section .about-imgs{
+    height: auto;
+    flex-basis: 100%;
+  }
+  .about-section .about-imgs{
+    position: static;
+  }
+  .about-section .about-imgs img:nth-child(1){
+    display: none !important;
+  }
+  .about-section .about-imgs img:nth-child(2){
+    display: block;
+    position: relative !important;
+    width: 100% !important;
+    top: 0;
+  }
+  footer{
+    margin-top: 0px !important;
+  }
+}
+
+
 footer{
   width: 100%;
   display: flex;
@@ -422,6 +594,7 @@ footer{
   background-color: var(--light);
   padding: 2rem;
   border-radius: 8px 8px 0 0;
+  margin-top: 6rem;
 }
 
 @media screen and (max-width: 1140px) {
@@ -451,4 +624,107 @@ footer{
   footer nav{
     flex-basis: 45%;
   }
+}
+footer h3{
+  color: var(--primary);
+}
+header a{
+  position: relative;
+  overflow: hidden;
+}
+header a::after, footer a::after{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent);
+  transform: scale(0);
+  transform-origin: left;
+  transition: transform 0.7s ease;
+  border-radius: 8px;
+}
+header a:hover::after, footer a:hover::after{
+  transform: scale(1);
+}
+header a:hover, .card a:hover, footer a:hover{
+  color: var(--accent);
+  transition: color 0.7s ease;
+}
+
+
+
+
+/*----------------------------------------------------------------*/
+.reservation{
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--light);
+  padding: 0;
+  border-radius: 16px;
+  width: 80%;
+    margin: 0 auto;
+}
+.reservation img{
+  height: 433px!important;
+  object-fit: cover;
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.35);
+  border-radius: 16px 0px 0px 16px;
+  width: 50%;
+  box-shadow: none;
+}
+form{
+  display: grid; 
+  max-width: 300px; 
+  gap: 20px;
+  padding: .8rem;
+  border-radius: 1rem;
+  margin: 0 auto;
+}
+@media screen and (max-width:768px) {
+  .reservation{
+    max-width: 300px !important;
+    margin: 0 auto;
+  }
+  .reservation img{
+    display: none !important;
+  }
+  form{
+    max-width: 300px !important;
+    margin: 0 auto;
+  }
+}
+form label{
+  color: var(--primary);
+  font-size: 23px;
+  font-family: 'Markazi Text', serif;
+  font-weight: 500;
+}
+input[type="date"], input[type="number"], select{
+  margin-top: -1rem !important;
+  font-size: 15px;
+  border-radius: .4rem;
+  padding: .2rem;
+  border: none;
+}
+input[type="date"]:hover, input[type="number"]:hover, select:hover{
+  cursor: pointer;
+}
+input[type="submit"]{
+  padding: .6rem;
+  border-radius: 16px;
+  background-color: var(--primary);
+  border: none;
+  font-weight: bold;
+  font-size: 15px;
+  border: 1px solid black;
+  margin-top: 1rem;
+}
+input[type="submit"]:hover{
+  background-color: var(--accent);
+  cursor: pointer;
+  transition: background-color 0.7s ease;
+  border: 1px dashed black;
 }
